[project]
name = "cg-use-everywhere"
description = "Allows Data to be Broadcasted to Some or All Unconnected Inputs."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/chrisgoringe/cg-use-everywhere"

[tool.comfy]
PublisherId = ""
DisplayName = "cg-use-everywhere"
Icon = ""