[project]
name = "cg-use-everywhere"
description = "A set of nodes that allow data to be 'broadcast' to some or all unconnected inputs. Greatly reduces link spaghetti."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/chrisgoringe/cg-use-everywhere"

[tool.comfy]
PublisherId = ""
DisplayName = "cg-use-everywhere"
Icon = ""