[project]
name = "cg-use-everywhere"
description = "A set of nodes that allow data to be 'broadcast' to some or all unconnected inputs. Greatly reduces link spaghetti."
version = "7.4.1"
license = { file = "LICENSE" }
dependencies = [
    "comfyui-frontend-package>=1.25.0"
]
classifiers = [
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/chrisgoringe/cg-use-everywhere"
Documentation = "https://github.com/chrisgoringe/cg-use-everywhere/blob/main/README.md"

[tool.comfy]
PublisherId = "chrisgoringe"
DisplayName = "CG Use Everywhere"
Icon = "https://raw.githubusercontent.com/chrisgoringe/cg-use-everywhere/refs/heads/main/docs/icon.png"
